# gpu-benchmarking

./: CMakeLists.txt  README.md
.github/workflows/: benchmark.yml
automation/: requirements.txt  run_benchmarks.py
src/: benchmark.cpp  kernel.cl  openCL_functions.cpp  openCL_functions.h  openMP_functions.cpp  openMP_functions.h
